2003-06-24  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlTypeMapElementInfo.cs: no need to compare nesting level in Equals.
	* XmlReflectionImporter.cs: Changed nullable default. Assign member's namespace to an
	  array if the namespace is not specified in XmlArrayItemAttribute.

2003-06-17  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlReflectionImporter.cs: Reset internal tables for each ImportMembersMapping call.
	* XmlSerializationReader.cs: GetXsiType(): use current reader.namespaceUri if namespace
	  is not specified in the xsi attribute.
	* XmlSerializationReaderInterpreter.cs: Fixed bug when reading an empty array from an empty element.
	* XmlSerializationWriterInterpreter.cs: Added null value check when writting an array.
	
2003-06-16  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlSerializationReader.cs : Synchronous fix with 
	  XmlElement.GetAttribute(name, ns) fix for GetNullAttr().
	* added XmlTypeMapMemberNamespace.cs.
	* XmlReflectionImporter,
	  XmlSerializationReaderInterpreter.cs,
	  XmlSerializationWriterInterpreter.cs,
	  XmlTypeMapping.cs : support for XmlNamespaceDeclarationAttribute.

2003-06-16  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlSerializationWriter.cs : some QName handling fix.

2003-06-13  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlSerializationReader.cs: Fixed error message.
	* XmlSerializationReaderInterpreter.cs: Fixed bug when reading XmlQualifiedNames as attributes
	  Thanks to Atsushi!
	* XmlSerializationWriter.cs: Null check in FromXmlQualifiedName.

2003-06-13  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlSerializationReader.cs: Fixed implementation of ReadElementQualifiedName() and ReadTypedPrimitive().
	* XmlSerializationReaderInterpreter.cs: Improved serialization of XmlQualifiedNames.
	* XmlSerializationWriter.cs: implemented methods for reading XmlQualifiedNames.
	* XmlSerializationWriterInterpreter.cs: Improved deserialization of XmlQualifiedNames.

2003-06-13  Lluis Sanchez Gual <lluis@ximian.com>
